--- a/src/assets/less/components/work-item.less
+++ b/src/assets/less/components/work-item.less
@@ -4,8 +4,22 @@
   border-radius: 15px;
   overflow: hidden;
 
+  &:before {
+    content: '';
+    position: absolute;
+    z-index: 2;
+    left: 0;
+    top: 0;
+    width: 100%;
+    height: 100%;
+    background: linear-gradient(0deg, #202020 12.26%, rgba(32, 32, 32, 0) 41.47%);
+    opacity: 0.75;
+    border-radius: 15px;
+  }
+
   &__img {
     position: absolute;
+    z-index: 1;
     left: 0;
     top: 0;
     width: 100%;
@@ -17,7 +31,7 @@
     position: absolute;
     bottom: 34px;
     left: 20px;
-    z-index: 1;
+    z-index: 3;
     display: flex;
     width: calc(100% - 36px);
   }
