fixed catalog btn

--- a/src/assets/less/components/catalog.less
+++ b/src/assets/less/components/catalog.less
@@ -27,6 +27,7 @@
 
   &__open {
     margin-top: 10px;
+    display: none;
     padding: 8px 16px;
     border-radius: 7px;
 
@@ -128,6 +129,10 @@
 
     &__title {
       font-size: 26px;
+    }
+
+    &__open {
+      display: inline-block;
     }
 
     &__section {
