fixed mobile menu links

--- a/src/assets/less/components/main.less
+++ b/src/assets/less/components/main.less
@@ -101,6 +101,10 @@
     }
   }
 
+  @media (max-width: 1090px) {
+    padding-top: 119px;
+  }
+
   @media (max-width: 991px) {
     &__section {
       margin-top: 60px;
@@ -128,6 +132,8 @@
   }
 
   @media (max-width: 767px) {
+    padding-top: 103px;
+    
     &__section {
       margin-top: 50px;
     }
