--- a/src/assets/less/components/header.less
+++ b/src/assets/less/components/header.less
@@ -107,6 +107,9 @@
   }
 
   @media (max-width: 1090px) {
+    position: fixed;
+    width: 100%;
+    
     &__bottom {
       padding: 18px 0;
     }
