changed faq button color

--- a/src/assets/less/components/faq-item.less
+++ b/src/assets/less/components/faq-item.less
@@ -11,6 +11,7 @@
     align-items: flex-start;
     width: 100%;
     text-align: left;
+    color: #151515;
     font-size: 20px;
     font-weight: 700;
     line-height: 1.5;
