--- a/src/assets/less/components/link.less
+++ b/src/assets/less/components/link.less
@@ -67,6 +67,10 @@
     font-family: "HelveticaNeue", sans-serif;
   }
 
+  &--semibold {
+    font-weight: 600;
+  }
+
   &--bold {
     font-weight: 700;
   }
