--- a/src/assets/less/components/main.less
+++ b/src/assets/less/components/main.less
@@ -49,6 +49,11 @@
     margin-top: 90px;
   }
 
+  &__content {
+    margin-top: 35px;
+    margin-bottom: 60px;
+  }
+
   &--pb-lg {
     padding-bottom: 90px;
   }
@@ -90,6 +95,10 @@
 
     &__product-order-info {
       margin-top: 0;
+    }
+
+    &__content {
+      margin-top: 25px;
     }
 
     &--pb-lg {
