--- a/src/assets/less/components/tape-message.less
+++ b/src/assets/less/components/tape-message.less
@@ -1,6 +1,6 @@
 .tape-message {
   position: relative;
-  background: #E5B532;
+  background: @color-primary;
   padding: 10px 28px;
   height: 68px;
   display: inline-flex;
