--- a/src/assets/less/components/text.less
+++ b/src/assets/less/components/text.less
@@ -115,8 +115,20 @@
     font-family: "HelveticaNeue", sans-serif;
   }
 
+  &--font-inter {
+    font-family: "Inter", sans-serif;
+  }
+
   &--light {
     font-weight: 300;
+  }
+
+  &--medium {
+    font-weight: 500;
+  }
+
+  &--semibold {
+    font-weight: 600;
   }
 
   &--bold {
