--- a/src/assets/less/components/title.less
+++ b/src/assets/less/components/title.less
@@ -22,6 +22,10 @@
     font-size: 22px;
   }
 
+  &--6 {
+    font-size: 19px;
+  }
+
   &--semibold {
     font-weight: 600;
   }
@@ -88,6 +92,15 @@
 
   &--lh-14 {
     line-height: 1.4;
+  }
+
+  &--lh-15 {
+    line-height: 1.5;
+  }
+
+  &--line {
+    padding-bottom: 10px;
+    border-bottom: 1px solid #252323;
   }
 
   @media (max-width: 1260px) {
