--- a/src/assets/less/base.less
+++ b/src/assets/less/base.less
@@ -11,10 +11,18 @@ body {
   flex-direction: column;
   min-width: 320px;
   min-height: 100%;
-  font-family: 'Manrope', sans-serif;
+  font-family: "Manrope", sans-serif;
 }
 
-h1, h2, h3, h4, h5, h6, p, ul, ol {
+h1,
+h2,
+h3,
+h4,
+h5,
+h6,
+p,
+ul,
+ol {
   margin: 0;
   padding: 0;
 }
@@ -44,4 +52,5 @@ button {
   border: none;
   background: transparent;
   cursor: pointer;
+  color: inherit;
 }
