--- a/src/assets/less/components/text-content.less
+++ b/src/assets/less/components/text-content.less
@@ -1,11 +1,51 @@
 .text-content {
-  line-height: 1.375;
-  
+  line-height: 1.625;
+
+  h1,
+  h2,
+  h3,
+  h4,
+  h5,
+  h6 {
+    text-transform: uppercase;
+    font-weight: 600;
+
+    &:not(:last-child) {
+      margin-bottom: 15px;
+    }
+
+    &:not(:first-child) {
+      margin-top: 18px;
+    }
+  }
+
+  h1,
+  h2,
+  h3 {
+    font-size: 30px;
+  }
+
+  h4 {
+    font-size: 24px;
+  }
+
+  h5 {
+    font-size: 20px;
+  }
+
+  h6 {
+    font-size: 18px;
+  }
+
   p,
   ul,
   ol {
+    letter-spacing: 0.025em;
+  }
+  
+  p {
     &:not(:first-child) {
-      margin-top: 24px;
+      margin-top: 18px;
     }
   }
 
@@ -14,9 +54,91 @@
     list-style-type: disc;
   }
 
+  ol {
+    padding-left: 24px;
+  }
+
+  img {
+    margin-left: auto;
+    margin-right: auto;
+    display: block;
+
+    &:not(:first-child) {
+      margin-top: 48px;
+    }
+
+    &:not(:last-child) {
+      margin-bottom: 60px;
+    }
+  }
+
+  .images-group {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+
+    &:not(:first-child) {
+      margin-top: 48px;
+    }
+
+    &:not(:last-child) {
+      margin-bottom: 60px;
+    }
+
+    img {
+      margin: 0;
+      height: auto;
+      min-width: 0;
+
+      &:not(:first-child) {
+        margin-left: 32px;
+      }
+
+      &:not(:last-child) {
+        margin-bottom: 0;
+      }
+    }
+  }
+
+  .text-content-sm {
+    margin-left: auto;
+    margin-right: auto;
+    max-width: 1048px;
+  }
+
+  @media (max-width: 1260px) {
+    h1,
+    h2,
+    h3 {
+      font-size: 26px;
+    }
+  
+    h4 {
+      font-size: 22px;
+    }
+  
+    h5 {
+      font-size: 18px;
+    }
+  
+    h6 {
+      font-size: 16px;
+    }
+  }
+
   @media (max-width: 991px) {
     font-size: 15px;
 
+    h1,
+    h2,
+    h3 {
+      font-size: 24px;
+    }
+  
+    h4 {
+      font-size: 20px;
+    }
+  
     p,
     ul,
     ol {
@@ -28,10 +150,52 @@
     ul {
       padding-left: 22px;
     }
+
+    img {
+      &:not(:first-child) {
+        margin-top: 40px;
+      }
+  
+      &:not(:last-child) {
+        margin-bottom: 48px;
+      }
+    }
+
+    .images-group {
+      &:not(:first-child) {
+        margin-top: 40px;
+      }
+  
+      &:not(:last-child) {
+        margin-bottom: 48px;
+      }
+
+      img {
+        margin: 0;
+
+        &:not(:first-child) {
+          margin-left: 24px;
+        }
+      }
+    }
   }
 
   @media (max-width: 767px) {
     font-size: 14px;
+
+    h1,
+    h2,
+    h3 {
+      font-size: 20px;
+    }
+  
+    h4 {
+      font-size: 18px;
+    }
+
+    h5 {
+      font-size: 16px;
+    }
 
     p,
     ul,
@@ -43,6 +207,34 @@
 
     ul {
       padding-left: 20px;
+    }
+
+    img {
+      &:not(:first-child) {
+        margin-top: 32px;
+      }
+  
+      &:not(:last-child) {
+        margin-bottom: 40px;
+      }
+    }
+
+    .images-group {
+      &:not(:first-child) {
+        margin-top: 32px;
+      }
+  
+      &:not(:last-child) {
+        margin-bottom: 40px;
+      }
+
+      img {
+        margin: 0;
+
+        &:not(:first-child) {
+          margin-left: 12px;
+        }
+      }
     }
   }
 }
