--- a/src/assets/less/fonts.less
+++ b/src/assets/less/fonts.less
@@ -10,3 +10,6 @@
 .font-face("HelveticaNeue", "../fonts/HelveticaNeue-Bold", 700);
 
 .font-face("Montserrat", "../fonts/Montserrat-Regular", 400);
+
+.font-face("Inter", "../fonts/Inter-Regular", 400);
+.font-face("Inter", "../fonts/Inter-Medium", 500);
