--- a/src/assets/less/styles.less
+++ b/src/assets/less/styles.less
@@ -11,6 +11,8 @@
 @import "./components/link";
 @import "./components/btn";
 @import "./components/btn-arrow";
+@import "./components/btn-filter";
+@import "./components/btn-catalog";
 @import "./components/input";
 @import "./components/checkbox";
 @import "./components/checkbox-circle";
@@ -40,6 +42,7 @@
 @import "./components/icon-plus";
 @import "./components/nav-btn";
 @import "./components/nav-btns";
+@import "./components/tag";
 @import "./components/header";
 @import "./components/banner-slide";
 @import "./components/banner-slider";
@@ -74,4 +77,8 @@
 @import "./components/product";
 @import "./components/other-product";
 @import "./components/other-products";
+@import "./components/blog";
+@import "./components/blog-card";
+@import "./components/article-content";
+@import "./components/article";
 @import "./components/footer";
