fix: fixed mobile menu height for mobile devices

--- a/src/assets/less/components/mobile-menu.less
+++ b/src/assets/less/components/mobile-menu.less
@@ -101,6 +101,7 @@
   &--active {
     visibility: visible;
     height: calc(100vh - 103px);
+    height: calc(100dvh - 103px);
   }
 
   &--show {
